PROJECT(qtvulkan)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_CXX_LINK_FLAGS "-lvulkan")
SET(CMAKE_CXX_LINK_FLAGS "-lassimp")
SET(CMAKE_CXX_LINK_FLAGS "-lxcb")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")

MESSAGE(STATUS ${VULKAN_LIB})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -DVK_PROTOTYPES -D_USE_MATH_DEFINES")

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
#FIND_PACKAGE(Qt5Quick REQUIRED)
#FIND_PACKAGE(Qt5Qml REQUIRED)

SET(qtvulkan_SRCS
 qvulkaninstance.cpp
 qvulkanview.cpp
)

INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    #${Qt5Quick_INCLUDE_DIRS}
    #${Qt5Qml_INCLUDE_DIRS}
)

ADD_LIBRARY(qtvulkan SHARED ${qtvulkan_SRCS})

SET(qtvulkan_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${Qt5Core_LIBRARIES}
 #${Qt5Gui_LIBRARIES}
 #${QT5Qml_LIBRARIES}
)

TARGET_LINK_LIBRARIES(qtvulkan "-lvulkan" ${qtvulkan_LIBS})

SET_TARGET_PROPERTIES(qtvulkan
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

SET_TARGET_PROPERTIES(qtvulkan
    PROPERTIES
    VERSION 0.01
    SOVERSION 1
)

# INSTALL
#INSTALL( TARGETS qtvulkan RUNTIME DESTINATION /usr/local/qtvulkan)
